# Pebble

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
crates/pebble-core/: Cargo.toml
crates/pebble-crypto/: Cargo.toml
crates/pebble-mail/: Cargo.toml
crates/pebble-mail/src/: gmail_sync.rs  idle.rs  imap.rs  lib.rs  outlook_sync.rs  parser.rs  realtime_policy.rs  reconcile.rs  smtp.rs  sync.rs  thread.rs
crates/pebble-mail/src/provider/: gmail.rs  imap_provider.rs  mod.rs  outlook.rs
crates/pebble-oauth/: Cargo.toml
crates/pebble-privacy/: Cargo.toml
crates/pebble-rules/: Cargo.toml
crates/pebble-store/: Cargo.toml
scripts/: build-tauri.mjs
site/: index.html  main.js  style.css  wrangler.jsonc  wrangler.toml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  lib.rs  snooze_watcher.rs  state.rs
src-tauri/src/commands/: accounts.rs  advanced_search.rs  attachments.rs  batch.rs  compose.rs  drafts.rs  folders.rs  health.rs  indexing.rs  mod.rs  network.rs  oauth.rs  pending_mail_ops.rs  search.rs  snooze.rs  sync_cmd.rs  threads.rs
src-tauri/src/commands/messages/: flags.rs  lifecycle.rs  mod.rs  provider_dispatch.rs  query.rs  rendering.rs
src-tauri/src/realtime/: mod.rs
src/app/: Layout.tsx  useMailtoOpen.ts  useNotificationOpenNavigation.ts  useRealtimeSyncTriggers.ts  useTrayI18n.ts
src/components/: AccountSetup.tsx  AttachmentList.tsx  ConfirmDialog.tsx  ContactAutocomplete.tsx  MessageActionToolbar.tsx  MessageDetail.tsx  MessageItem.tsx  MessageList.tsx  SearchBar.tsx  SelectionActionPopover.tsx  Sidebar.tsx  Skeleton.tsx  Spinner.tsx  StatusBar.tsx  ThreadMessageBubble.tsx  TitleBar.tsx
src/hooks/: useBilingualTranslation.ts  useClickOutside.ts  useComposeDraft.ts  useComposeEditor.ts  useComposeRecipients.ts  useKeyboard.ts  useMessageLoader.ts  useNetworkStatus.ts
src/lib/: accountColors.ts  api.ts  extractErrorMessage.ts  folderAggregation.ts  ipc-types.ts  privacyMode.ts
src/locales/: en.json  zh.json
src/stores/: compose.store.ts  confirm.store.ts  kanban.store.ts  ui.store.ts
src/styles/: index.css
tests/app/: Layout.navigation.test.tsx  notificationOpenNavigation.test.tsx  realtimeSyncTriggers.test.tsx  useCloseToBackground.test.tsx  useMailtoOpen.test.tsx  useTrayI18n.test.tsx
tests/components/: AccountSetup.oauth.test.tsx  ConfirmDialog.test.tsx  MessageDetail.selection.test.tsx  (+8 more)
(+87 files in other folders)
