[workspace]
members = [
    "src-tauri",
    "crates/pebble-core",
    "crates/pebble-store",
    "crates/pebble-privacy",
    "crates/pebble-mail",
    "crates/pebble-search",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.39", features = ["bundled"] }
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
async-imap = { version = "0.10", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.5", default-features = false, features = ["runtime-tokio"] }
mail-parser = "0.9"
tantivy = "0.22"
ammonia = "4"
