[package]
name = "pebble"
version = "0.0.4"
edition = "2021"

[lib]
name = "pebble_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tokio = { workspace = true }
opener = "0.7"
pebble-core = { path = "../crates/pebble-core" }
pebble-store = { path = "../crates/pebble-store" }
pebble-privacy = { path = "../crates/pebble-privacy" }
pebble-mail = { path = "../crates/pebble-mail" }
pebble-search = { path = "../crates/pebble-search" }
pebble-rules = { path = "../crates/pebble-rules" }
pebble-translate = { path = "../crates/pebble-translate" }
pebble-crypto = { path = "../crates/pebble-crypto" }
pebble-oauth = { path = "../crates/pebble-oauth" }
tauri-plugin-notification = "2"
lettre = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[target.'cfg(windows)'.dependencies]
tauri-winrt-notification = "0.7"

[build-dependencies]
tauri-build = { workspace = true }
