[package]
name = "pebble-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
pebble-core = { path = "../pebble-core" }
pebble-store = { path = "../pebble-store" }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-imap = { workspace = true }
async-native-tls = { workspace = true }
mail-parser = { workspace = true }
futures = "0.3"
